testsuite/tests/rep-poly/RepPolyDoBody1.stderr

RepPolyDoBody1.hs:24:3: error:
    • The first argument of the rebindable syntax operator ‘(>>)’
        arising from a do statement
      does not have a fixed runtime representation.
      Its type is:
        ma0 :: TYPE c0
      Cannot unify ‘rep’ with the type variable ‘c0’
      because it is not a concrete ‘RuntimeRep’.
    • In a stmt of a 'do' block: undefined :: ma
      In the expression:
        do undefined :: ma
         return ()
      In an equation for ‘foo’:
          foo _
            = do undefined :: ma
               return ()
    • Relevant bindings include
        foo :: () -> ma (bound at RepPolyDoBody1.hs:23:1)
